# RockPaperScissor

./: README.md  dataset.py  game.py  model.py  pyproject.toml  train.py  utils.py
saved_models/rps_exp_1/: fingerprint.pb  keras_metadata.pb  saved_model.pb
saved_models/rps_exp_1/variables/: variables.index
