[tool.poetry]
name = "rockpaperscissor"
version = "0.1.0"
description = ""
authors = ["your_username <84909641+rohank20@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
